[package]
edition = "2021"
name = "xb15_core"
version = "0.0.0"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.6.3", features = ["napi8"] }
napi-derive = "2.6.0"
rs_ws281x = { git = "https://github.com/akrantz01/rpi-ws281x-rust", branch = "update-submodule" }

# Own libs
tof = { version = "=0.0.0", path = "../tof" }
gif_parser = { version = "=0.0.0", path = "../gif_parser" }

# Other libs
rpi-led-matrix = "0.4.0"

[build-dependencies]
napi-build = "2.0.1"
